deploy/k8s/overlays/academy-eks/postgres-service.yml
apiVersion: v1
kind: Service
metadata:
  name: inner-cosmos-postgres
spec:
  clusterIP: None
  selector:
    app.kubernetes.io/name: inner-cosmos
    app.kubernetes.io/component: postgres
  ports:
    - {name: postgres, port: 5432, targetPort: postgres}
