deploy/k8s/overlays/academy-eks/http-route.yml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: inner-cosmos
spec:
  parentRefs:
    - name: inner-cosmos
      sectionName: https
  rules:
    - matches:
        - path: {type: PathPrefix, value: /}
      backendRefs:
        - name: inner-cosmos-api
          port: 8080
